tests/paczka1/small_fuzzy/87169831.err
Error in line 1: OCYgsS3bzbF S400 96,8
Error in line 2: ypP5P4 A156 82,3
Error in line 3: OCYgsS3bzbF A156 68,5
Error in line 6: ypP5P4 S400 75,3
